objects/FieloEE__LevelCriteria__c.object
<CustomObject>
    <description>Criteria that determine the level of a member in your program.</description>
    <fields>
        <fullName>FieloEE__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__DateValue__c</fullName>
        <description>Date when level criteria will be valid.</description>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldName__c</fullName>
        <description>In order to make a rule, it is necessary to choose fields to make a logical structure.</description>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldType__c</fullName>
        <description>Type of field selected.</description>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Level__c</fullName>
        <description>Level for the rule.</description>
        <label>Level</label>
        <referenceTo>FieloEE__Level__c</referenceTo>
        <relationshipLabel>Level Criterias</relationshipLabel>
        <relationshipName>LevelCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Name__c</fullName>
        <description>Name of the level.</description>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloEE__FieldName__c + &apos; &apos; + Text(FieloEE__Operator__c ) + &apos; &apos; + FieloEE__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NumberValue__c</fullName>
        <description>Numerical value.</description>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Operator__c</fullName>
        <description>Each value of this picklist allows to make a logical structure with fields selected.</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>not contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Level Criteria</label>
    <nameField>
        <label>Level Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>